@@ -364,6 +364,7 @@ lib_objs2 = \
 	$(OBJ_DIR)\mb_mgr_hmac_submit_avx512.obj \
 	$(OBJ_DIR)\mb_mgr_zuc_submit_flush_sse.obj \
 	$(OBJ_DIR)\mb_mgr_zuc_submit_flush_sse_no_aesni.obj \
+	$(OBJ_DIR)\mb_mgr_zuc_submit_flush_gfni_sse.obj \
 	$(OBJ_DIR)\mb_mgr_zuc_submit_flush_avx.obj \
 	$(OBJ_DIR)\mb_mgr_zuc_submit_flush_avx2.obj \
 	$(OBJ_DIR)\mb_mgr_zuc_submit_flush_avx512.obj \
